# CSV-Data-Analyst-Agent

./: .gitignore  pyproject.toml  requirements.txt
apps/: csv_data_analystAgent.py  p1_qna_boat.py
notebooks/: chatbot.ipynb  chatbot.py  p1-agent.py  p2.py
